2008-05-30  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects/BuildResult.cs: New method for checking if a
	  build failed.
	* MonoDevelop.Projects/DotNetProject.cs: Set properly set debug mode
	  when creating a project.

2008-05-30  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects/SolutionFolder.cs,
	  MonoDevelop.Projects/SolutionEntityItem.cs,
	  MonoDevelop.Projects/SolutionItem.cs,
	  MonoDevelop.Projects/DotNetProject.cs,
	  MonoDevelop.Projects/Project.cs,
	  MonoDevelop.Projects.Parser/ProjectCodeCompletionDatabase.cs: When
	  notifying that a project has changed, provide information about
	  what changed.
	* MonoDevelop.Projects/CombineEntryEventArgs.cs,
	  MonoDevelop.Projects/SolutionItemEventArgs.cs,
	  MonoDevelop.Projects.mdp, Makefile.am: Renamed file.

2008-05-29  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom/DomField.cs: checked in domfield.

2008-05-29  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom/IMember.cs,
	  MonoDevelop.Projects.Dom/DomReturnType.cs,
	  MonoDevelop.Projects.Dom/DomRegion.cs,
	  MonoDevelop.Projects.Dom/DomField.cs,
	  MonoDevelop.Projects.Dom/DomPersistence.cs,
	  MonoDevelop.Projects.Dom/CodeCompletionDatabase.cs,
	  MonoDevelop.Projects.Dom/IReturnType.cs,
	  MonoDevelop.Projects.Dom/AbstractMember.cs,
	  MonoDevelop.Projects.Dom/DomLocation.cs: Worked on code completion
	  database for the new dom layer.

2008-05-29  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects.Formats.MSBuild/MSBuildProjectHandler.cs: Fix
	  property metadata deserialization.

2008-05-28  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Projects/DotNetProject.cs: Make CompileTarget virtual.

2008-05-28  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects.Formats.MD1/MD1DotNetProjectHandler.cs: Fix bug
	  379485 - Empty project causes a compile error.

2008-05-28  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom/DomType.cs,